--- a/MyBlog.Core/MyBlog.Core.csproj
+++ b/MyBlog.Core/MyBlog.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.1" />
+  </ItemGroup>
+
 </Project>
