--- a/MyBlog.Core/MyBlog.Core.csproj
+++ b/MyBlog.Core/MyBlog.Core.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utilities\Results\Abstract\" />
+    <Folder Include="Utilities\Results\Concrete\" />
+  </ItemGroup>
+
 </Project>
