Added new changes

--- a/MyBlog.WebUI/MyBlog.WebUI.csproj
+++ b/MyBlog.WebUI/MyBlog.WebUI.csproj
@@ -20,6 +20,7 @@
   <ItemGroup>
     <Folder Include="Areas\Administrator\Data\" />
     <Folder Include="Areas\Administrator\Models\" />
+    <Folder Include="images\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
 
